feature/ETD-1059-transactions-add-new-currencies